capstone.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: capstone
   labels:
     app: java
