mynamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynamespace
  labels:
    name: mynamespace
