testapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-pods
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
