lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  selector:
    app: java 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
