networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy
  namespace: capstone
spec:
  podSelector:
    matchLabels:
      app: java  
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: java
